osprey_worker/src/osprey/engine/query_language/tests/test_parse_query_to_validated_ast/test_validates_names_with_wildly_invalid_name.txt
error: unknown identifier
--> main.sml:1:8
     |
   1 | Query = KLJHaflLasfkL == 'jake'
     |         ^ `KLJHaflLasfkL` does not exist in any rule files. typo, perhaps?
